--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TELEGRAM_BOT_TOKEN=8514875297:AAGr7O9RlLf668EZe_6cwn0GociV4Jtupyc
-MONGODB_URI=mongodb+srv://pasqualecimmino_db_user:@venduto.ujxcsss.mongodb.net/
+TELEGRAM_BOT_TOKEN=8
+MONGODB_URI=mongodb+srv
